--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@playwright/test": "^1.39.0",
-    "@types/node": "^20.8.6"
+    "@types/node": "^20.8.6",
+    "browserslist": "^4.24.4",
+    "caniuse-lite": "^1.0.30001700"
   },
   "jest-junit": {
     "suiteName": "jest tests",
