--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.3",
+    "axios": "^1.7.9",
     "jest-junit": "^16.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,11 +39,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@playwright/test": "^1.39.0",
-    "@types/node": "^20.8.6",
-    "browserslist": "^4.24.4",
-    "caniuse-lite": "^1.0.30001700"
+    "@types/node": "^20.8.6"
   },
   "jest-junit": {
     "suiteName": "jest tests",
