--- a/ci/Dockerfile-playwright
+++ b/ci/Dockerfile-playwright
@@ -1,3 +1,3 @@
 FROM mcr.microsoft.com/playwright:v1.50.1-jammy
 RUN npm install netlify-cli serve
-RUN apt update && ap install node-jq -y
+RUN apt update && apt install node-jq -y
