--- a/ci/Dockerfile-playwright
+++ b/ci/Dockerfile-playwright
@@ -1,3 +1,3 @@
 FROM mcr.microsoft.com/playwright:v1.50.1-jammy
-RUN npm install netlify-cli serve
+RUN npm install -g netlify-cli serve
 RUN apt update && apt install node-jq -y
