--- a/ci/Dockerfile-aws-cli
+++ b/ci/Dockerfile-aws-cli
@@ -1,3 +1,4 @@
 FROM amazon/aws-cli:2.23.15
-RUN yum update -y && amazon-linux-extras install docker
-RUN install jq -y
+RUN yum update -y && \
+    amazon-linux-extras install docker -y && \
+    yum install jq -y
